fixed scrollbars

--- a/src/components/MainPage/Windows/ViewData/Tree/tree.css
+++ b/src/components/MainPage/Windows/ViewData/Tree/tree.css
@@ -1,3 +1,13 @@
+::-webkit-scrollbar { /* chrome based */
+    width: 0px;  /* ширина scrollbar'a */
+    background: transparent;  /* опционально */
+}
+html {
+    -ms-overflow-style: none;  /* IE 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+
+
 ul>li {
     list-style-type: none
 }
